# codeward

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
docs/: BENCHMARKS.md  CONFIG.md  GUIDE.md  JSON_SCHEMA.md  PLAN.md  RELEASE.md
docs/plans/: token-spend-optimization-features.md
src/codeward/: cli.py  hooks.py  index.py  mcp_server.py  watch.py
src/codeward/analyzers/: treesitter.py
tests/: test_cli.py  test_mcp_server.py
